logs/dag_id=people/run_id=manual__2023-11-03T191321.641146+0000/task_id=create_people_table/attempt=1.log
[2023-11-03T19:13:23.270+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: people.create_people_table manual__2023-11-03T19:13:21.641146+00:00 [queued]>
[2023-11-03T19:13:23.292+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: people.create_people_table manual__2023-11-03T19:13:21.641146+00:00 [queued]>
[2023-11-03T19:13:23.293+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-03T19:13:23.294+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-11-03T19:13:23.295+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-03T19:13:23.343+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_people_table> on 2023-11-03 19:13:21.641146+00:00
[2023-11-03T19:13:23.362+0000] {standard_task_runner.py:55} INFO - Started process 3379 to run task
[2023-11-03T19:13:23.375+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'people', 'create_people_table', 'manual__2023-11-03T19:13:21.641146+00:00', '--job-id', '142', '--raw', '--subdir', 'DAGS_FOLDER/people.py', '--cfg-path', '/tmp/tmpm_m160be']
[2023-11-03T19:13:23.377+0000] {standard_task_runner.py:83} INFO - Job 142: Subtask create_people_table
[2023-11-03T19:13:23.522+0000] {task_command.py:376} INFO - Running <TaskInstance: people.create_people_table manual__2023-11-03T19:13:21.641146+00:00 [running]> on host 6b65bc8eaea5
[2023-11-03T19:13:23.624+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=people
AIRFLOW_CTX_TASK_ID=create_people_table
AIRFLOW_CTX_EXECUTION_DATE=2023-11-03T19:13:21.641146+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-11-03T19:13:21.641146+00:00
[2023-11-03T19:13:23.642+0000] {base.py:71} INFO - Using connection ID 'postgres' for task execution.
[2023-11-03T19:13:23.647+0000] {sql.py:315} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS people (
            Index INT NOT NULL primary key,
            User_Id varchar(100),
            First_Name varchar(100),
            Last_Name varchar(100),
            Sex varchar(100),
            Email varchar(100),
            Phone varchar(100),
            Date_of_birth,
            Job_title varchar(100)
        );
    , parameters: None
[2023-11-03T19:13:23.651+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ","
LINE 10:             Date_of_birth,
                                  ^

[2023-11-03T19:13:23.662+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=people, task_id=create_people_table, execution_date=20231103T191321, start_date=20231103T191323, end_date=20231103T191323
[2023-11-03T19:13:23.683+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 142 for task create_people_table (syntax error at or near ","
LINE 10:             Date_of_birth,
                                  ^
; 3379)
[2023-11-03T19:13:23.718+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-03T19:13:23.759+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
